--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-async-errors": "^3.1.1",
     "express-oauth2-jwt-bearer": "^1.4.1",
     "http-status-codes": "^2.2.0",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
