--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-oauth2-jwt-bearer": "^1.4.1",
     "http-status-codes": "^2.2.0",
     "mongodb": "^5.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
