--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-async-errors": "^3.1.1",
     "express-oauth2-jwt-bearer": "^1.4.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
     "mongodb": "^5.6.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.2"
