--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "roughjs": "^4.5.2",
+    "socket.io-client": "^4.7.0",
     "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^2.1.4"
   },
