--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jwks-rsa": "^3.0.1",
     "mongodb": "^5.6.0",
     "morgan": "^1.10.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
